Collapse css fixes

--- a/src/css/AntdOverrides.scss
+++ b/src/css/AntdOverrides.scss
@@ -60,6 +60,7 @@
 
   .ant-collapse-content {
     overflow: initial;
+    padding: 14px 0 14px 0;
   }
 
   .ant-collapse-header {
