--- a/src/genericComponents/selectionGroup/SelectionGroup.module.scss
+++ b/src/genericComponents/selectionGroup/SelectionGroup.module.scss
@@ -2,6 +2,6 @@
   //border: 1px solid red;
   text-align: left;
   #filter-item {
-    margin-top: 14px;
+    //margin-top: 14px;
   }
 }
